# Sports-Media-Asset-Protection

./: .gitignore  Detailed_Technical_Documentation.md  README.md  TAKEDOWN_PLAN.md  TESTING_PLAN.md  TEST_RESULTS.md  chatgpt_said.txt  gemini_enhancement_plan.md  local_agent.py  test.db  test_discovery.py  test_fix.py  verify_gemini.py
backend/: Dockerfile  local_agent.py  pyproject.toml  repair_asset5.py  sports_guardian_v6_pdq.py  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 01b0e0c43ea4_initial_schema.py  0912aa0a238a_add_cascade_delete.py  0aff141f128a_add_dispatch_status_to_detection_results.py  29b654861f9b_initial_tables.py  47913c25f5e7_add_metadata_fields.py  70173bded4bf_add_rich_metadata_to_scraped_videos.py  7e9fec7312e3_add_asset_frames_and_total_frames.py  c4d8f43e7f77_add_frame_paths_to_scraped_videos.py  e86b38cdd8e5_add_audio_storage_columns.py  f55b704ce9ca_add_scraped_frames_table.py  f653a9d9b4c2_add_external_data_received.py  fffa04d7fc14_add_detection_and_pipeline_models.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: assets.py  login.py  notice.py  pipeline.py  review.py  scrape.py  users.py
backend/app/api/v1/: assets.py  auth.py  notice.py  pipeline.py  review.py  router.py
backend/app/core/: config.py  job_logging.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/db/models/: asset.py  asset_frame.py  detection_result.py  judge_review.py  scan_job.py  scraped_frame.py  scraped_video.py  user.py
backend/app/schemas/: asset.py  notice.py  pipeline.py  review.py  user.py
backend/app/services/decision/: ai_moderator.py
backend/app/services/fingerprint/: generator.py
backend/app/services/notice/: smtp.py
backend/app/services/pipeline/: orchestrator.py  processor.py
backend/app/services/review/: queue.py
backend/app/services/scoring/: engine.py
backend/core/: app.py
backend/tests/: conftest.py  test_api_notice.py  test_scoring.py
(+51 files in other folders)
