[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.6"
]
